# metamodule-seaside-modular

./: .gitmodules  CMakeLists.txt  plugin-mm.json
SeasideModularVCV/inc/: AudioFile.h  poisson.cpp  utils.hpp
SeasideModularVCV/inc/DaisySP/Source/Control/: adsr.cpp
SeasideModularVCV/src/: Proteus.cpp  ProteusX.cpp  Tala.cpp  plugin.cpp
metamodule-plugins/SeasideModular/: plugin-mm.json
